--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								    Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
-										<img src="img\22382427_1321084521352427_283036437474977537_o.jpg" alt="" />
+										<img src="img\JOA_CIN-729.jpg" alt="" />
 									</span>
 								</section>
 
