--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 										públicos.<br />
 										Você vai encontrar também, minhas experiências profissionais, habilidades,
 								    ferramentas e conceitos envolvendo a Ciência de Dados.<br />
-								    Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
+								    <p>Sinta-se à vontade para entrar em contato através dos links no final da página.</p></p>
 									</div>
 									<span class="image object">
-										<img src="img\JOA_CIN-729.JPG" alt="" />
+										<img src="img\JOA_CIN-729.jpg" alt="" style="height:900px;width:650px;"/>
 									</span>
 								</section>
 
