--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								    <p>Sinta-se à vontade para entrar em contato através dos links no final da página.</p></p>
 									</div>
 									<span class="image object">
-										<img src="img\JOA_CIN-729.jpg" alt="" style="height:900px;width:650px;"/>
+										<img src="img\JOA_CIN-729.JPG" alt="" style="height:900px;width:650px;"/>
 									</span>
 								</section>
 
