--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 												<p>Estudo aplicado na plataforma de ensino Moodle utilizada pelos alunos da UFRGS.
 													 Mineração e limpeza dos dados produzidos pelos alunos ao utilizar a plataforma.
-													 Cosntrução de grafos utilizando Neo4J para identificar quais recursos de ensino são os mais utilizados pelos alunos que obtiveram as melhores notas.</p>
+													 Construção de grafos utilizando Neo4J para identificar quais recursos de ensino são os mais utilizados pelos alunos que obtiveram as melhores notas.</p>
 
 
 										</section>
