Added new skill: Streamlit library

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 												<h3> Engenharia de Software</h3>
 												<p><ul>
 														<li>Git, Github e Gitlab.</li>
-														<li>Flask e Python API's.</li>
+														<li>Flask, Python API's e Streamlit.</li>
 														<li>AWS Amazon.</li>
 													</ul>
 												</p>
